Version 1.1.0
=============
* Rectangle::intersect has been renamed to Rectangle::isIntersecting.
* Widget::hasModalFocus has been renamed to Widget::isModalFocused.
* Widget::hasModalMouseInputFocus has been renamed to Widget::isModalMouseInputFocused.
* Widget::generateAction has been renamed to Widget::distributeActionEvent.

Version 1.0.0
=============
* Large number of fixes to widgets/drawing/sdl2 support
* New widget InputBox
* Memory leak fixes in MessageBox example
* Python 3 fixes
* Stability fixes

Version 0.9.0
=============
* Guisan forked from Guisan
* Move codebase to SDL2.0
* Drop allegro support
* Move to scons build system
* Clean up code, reorganize

Version 0.6.1
=============
* The functions add, remove and clear have been removed from Widget.
  They now reside protected in basic container.
* Inclusion of OpenGL headers has been fixed on Mac.

Version 0.6.0
=============
* A lot of function definitions from BasicContainer have been moved down to
  Widget, but Widget doesn't provide any useful implementations of these
  functions. Useful implementations still reside in BasicContainer. 
  For container widget implementations inheriting from BasicContainer, as before, 
  should work just fine. The reason for the move of definitions is to be able to 
  consider a widget a container for the sake of simplicity when it comes to 
  distribution of input.
* The functions Widget::lostFocus andWidget::gotFocus have been renamed to
  Widget::focusLost and Widget::focusGained.
* DeathListener is a new interface which can be used to listen for a widget's
  death. Because of the presence of death listeners the function
  BasicContainer::_announceDeath has been removed.
* MouseListener now has the function mouseDragged which is called if a widget
  is dragged.
* All distribution of input is now handled by the Gui class. Because of this
  all functions regarding input have been removed from the classes Widget
  and BasicContainer.