@@ -1,4 +1,4 @@
-* Continue rebasing from 869e0ce38da05623c040b063ac612de2be60e5e5
+* Continue rebasing from 3a75046d763099215a96be741a884385f2bb98c3
 * Add a focus listener interface.
 * Make focus apply synchronously.
 * Graphics and input objects for DirectX.
